@@ -4,7 +4,7 @@ Theme URI: https://mu-bit.com/blog/gimliii-wordpress-theme/
 Author: bravokeyl
 Author URI: https://bravokeyl.com/
 Description: Very simple and clean green theme, supports custom header , custom background , comes with two widgets and three footer widget areas , sidebar widgets.
-Version: 2.1.0
+Version: 2.1.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: gimliii
